Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10100

sanity test_27a: setstripe failed with "error on ioctl 0x8008669a for '*' (3): Invalid argument"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.13.0, Lustre 2.12.3
    • Lustre 2.11.0, Lustre 2.12.0, Lustre 2.13.0, Lustre 2.12.1
    • trevis, full, x86_64 servers, ppc clients
      servers: el7.4, ldiskfs, branch master, v2.10.53.1, b3642
      clients: el7.4, branch master, v2.10.53.1, b3642
    • 3
    • 9223372036854775807

      https://testing.whamcloud.com/test_sessions/ba995751-659c-4e63-9b5b-fbf101137b78

      From test_log:

      stripe_count:  1 stripe_size:   1048576 stripe_offset: -1
      error on ioctl 0x8008669a for '/mnt/lustre/d27/f0' (3): Invalid argument
      error: setstripe: create striped file '/mnt/lustre/d27/f0' failed: Invalid argument
       sanity test_27a: @@@@@@ FAIL: setstripe failed 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:5289:error()
        = /usr/lib64/lustre/tests/sanity.sh:1357:test_27a()
        = /usr/lib64/lustre/tests/test-framework.sh:5565:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:5604:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:5451:run_test()
        = /usr/lib64/lustre/tests/sanity.sh:1361:main()
      

            yujian Jian Yu
            jcasper James Casper (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: